--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,7 +16,7 @@
      width: 375px;
      height: 812px;
 
-     background: #FFFFFF;
+     //background: #FFFFFF;
 }
 
 // mixin composant collapse
