--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -1,27 +1,3 @@
-.kasa-home-carousel {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     height: 100%;
-     
-     .rectangle2 {
-     width: 200px;
-     height: 300px;
-     background-color: #eee;
-     text-align: center; 
-     }
-     img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-        
-        h2 {
-          margin-top: 10px;
-          font-size: 16px;
-        } 
-}
-
 .carousel-container {
   position: absolute;
   left: 0%;
@@ -121,5 +97,106 @@
   }
 }  
 @media screen and (max-width: 375px){
+  .carousel-container {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    
+
+    mix-blend-mode: normal;
+    border-radius: 25px;
+    height: 255px;
+    width: 335px;
+    left: 0px;
+    top: 0px;
+    border-radius: 10px;
+
+    
+    
+  }
+
+  .carousel-arrow-container img {
+      width: 100%;
+      //max-width: 1240px;
+      //height: 415px;
+      height: 255px;
+      border-radius: 10px;
+      object-fit: cover;
+  }
+      
+  .carousel-arrow-container .MuiSvgIcon-root {
+      position: absolute;
+      cursor: pointer;
+      height: 30px;
+      width: 40px;
+      top: 49%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+      }
+      
+      .carousel-arrow-container .MuiSvgIcon-root:first-child {
+      left: 0;
+      margin-left: 15px;
+      
+      }
+      
+      .carousel-arrow-container .MuiSvgIcon-root:last-child {
+      right: 0;
+    
+  }
+
+  .Carousel-title-location{
+    h1{
+      position: absolute;
+      //left: 5.33%;
+      right: 5.33%;
+
+      bottom: 49.51%;
+      width: 335px;
+      height: 73px;
+      
+      top:42%;
+
+      //top:46%;
+      
+        
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 142.6%;
+      /* or 51px */
+          
+      display: flex;
+      align-items: flex-end;
+          
+      color: #FF6060;
+          
+    }
+    p{
+      
+        position: absolute;
+        right: 8.53%;
+        top: 60%;
+        bottom: 46.18%;
+
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 142.6%;
+        /* identical to box height, or 26px */
+    
+      display: flex;
+      align-items: flex-end;
+    
+      color:  #FF6060;
+    }
+  }  
+
+
 }   
    
