--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -35,3 +35,40 @@
      }
 }
 
+@media screen and (max-width: 375px){
+     .kasa-logement{
+          @include pageLengthmobile();
+          .kasa-logement-body{
+               position: absolute;
+               width: 335px;
+               height: 515.93px;
+               left: 20px;
+               top: 94px;
+     
+          }
+          
+          .kasa-logement-body-carousel{
+               position: absolute;
+               left: 0%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+          
+          }
+         
+          .kasa-logement-body-content{
+               position: absolute;
+               width: 335px;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 0px;
+               top: 532px;
+     
+          }
+     }
+}
