--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -9,8 +9,8 @@
     background: #FF6060;
     border-radius: 5px;
     cursor: pointer;
-    Width:1023px;
-    Height:47px;
+    
+    //Height:47px;
           
     h3 {
       margin: 0;
