--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,6 @@
 @import "./carousel";
 @import "./hostrate";
 @import "./collapse";
-@import "./collapseLogement";
+//@import "./collapseLogement";
 @import "./tag";
-
+@import "./testcollapse";
