--- a/src/styles/_tag.scss
+++ b/src/styles/_tag.scss
@@ -2,10 +2,11 @@
      p{
           position: absolute;
           left: 23.78%;
+          //left: -37.22%;
           right: 35.65%;
           top: 12%;
           bottom: 8%;
-
+          //width: 202px;
           font-family: 'Montserrat';
           font-style: normal;
           font-weight: 500;
@@ -94,6 +95,7 @@
                font-weight: 500;
                font-size: 10px;
                line-height: 142.6%;
+               //width: 202px;
      
                text-align: center;
      
@@ -111,6 +113,7 @@
           top: -214px;
           background: #FF6060;
           border-radius: 5px;
+          
          
                
      }
