--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -113,6 +113,7 @@
     top: 0px;
     border-radius: 10px;
 
+   
     
     
   }
@@ -149,18 +150,21 @@
   }
 
   .Carousel-title-location{
+    
     h1{
       position: absolute;
       //left: 5.33%;
       right: 5.33%;
 
       bottom: 49.51%;
-      width: 335px;
+      width:100%;
       height: 73px;
       
-      //top:42%;
+      top:42%;
 
-      top:45%;
+      white-space: nowrap;
+      overflow: hidden;
+      //text-overflow: ellipsis;
       
         
       font-family: 'Montserrat';
@@ -192,6 +196,7 @@
     
       display: flex;
       align-items: flex-end;
+     
     
       color:  #FF6060;
     }
