--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -1,7 +1,25 @@
-.page {
-  @include collapse-apropos();
-    
-  .RectangleTitre {
+
+/**********Scss page apropos collapse*/
+.apropos-collapse {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 1023px;
+  height: 47px;
+  left: 208px;
+  top: 406px;
+
+
+  & .collapse-container {
+    margin-bottom: 20px;
+   
+
+    &:not(:last-child) {
+      margin-bottom: 40px;
+    }
+  }
+
+  & .collapse-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,9 +27,9 @@
     background: #FF6060;
     border-radius: 5px;
     cursor: pointer;
-    
-    //Height:47px;
-          
+    width: 1023px;
+    height: 47px;
+
     h3 {
       margin: 0;
       font-family: 'Montserrat';
@@ -24,35 +42,38 @@
       align-items: center;
       color: #FFFFFF; 
     }
-    svg {
+
+    & .collapse-icon {
+      transition: transform 0.3s ease-in-out;
+      color: #FFFFFF;
       display: inline-block;
       position: absolute;         
       left: 93.75%;
       right: 18.63%;
       width: 66px;
       height: 36px;
-      color: #FFFFFF;
-      transition: transform 0.3s ease;
+
+      &.open {
+        transform: rotate(180deg);
+      }
     }
   }
-      
-  .RectangleTexte {
-    overflow: hidden;
+
+  & .collapse-content-closed {
     height: 0;
-    transition: height 0.3s ease-out;
+    overflow: hidden;
+    transition: height 0.3s ease-in-out;
   }
-      
-  .RectangleTexte.open {
-    height: auto;
-    transition: height 0.3s ease-out;
-  }
-      
-  .bis {
+
+  & .collapse-content {
+    overflow: hidden;
+    transition: height 0.3s ease-in-out;
     padding: 20px;
     background: #F7F7F7;
     border-radius: 5px;
+    width: 1023px;
     //width: 71%;
-      p {
+     & p{
         margin: 0;
         font-family: 'Montserrat';
         font-style: normal;
@@ -63,16 +84,18 @@
         //width: 71%;
         color: #FF6060;
       }
+    
   }
 
-  .apropos-collapsable1 {
+  & .collapse-0 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     position: relative;
     top:406px;
-}
-  .apropos-collapsable2 {
+  }
+
+  & .collapse-1 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
@@ -80,7 +103,8 @@
     //top:484px;
     top: 422px;
   }
-  .apropos-collapsable3 {
+
+  & .collapse-2 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
@@ -88,28 +112,32 @@
     //top:699px;
     top: 439px;
   }
-  .apropos-collapsable4 {
+
+  & .collapse-3 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     position: relative;
     //top:776px;
     top: 454px;
-  }     
-}
+  }
 
-.page.all-open {
-     /* Styles pour la longueur de la page si tous les éléments sont ouverts */
-     @include pageLengthDaproposOpen();
-        
-   }
 
-@media screen and (max-width: 375px){
-  .page {
-  @include collapse-aproposM();
-    
-  .RectangleTitre {
-    display: flex;
+  @media screen and (max-width: 375px){
+    @include collapse-aproposM();
+    top: 340px;
+ 
+    & .collapse-container {
+      margin-bottom: 20px;
+     
+  
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+  
+    & .collapse-header {
+      display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
@@ -118,9 +146,9 @@
     cursor: pointer;
     Width:335px;
     Height:30px;
-          
-    h3 {
-      margin: 0;
+  
+      h3 {
+        margin: 0;
       font-family: 'Montserrat';
       font-style: normal;
       font-weight: 500;
@@ -130,32 +158,35 @@
       display: flex;
       align-items: center;
       color: #FFFFFF; 
+      }
+  
+      & .collapse-icon {
+        display: inline-block;
+        position: absolute;         
+        left: 83.75%;
+        right: 18.63%;
+        width: 66px;
+        height: 30px;
+        color: #FFFFFF;
+        transition: transform 0.3s ease;
+  
+        &.open {
+          transform: rotate(180deg);
+        }
+      }
     }
-    svg {
-      display: inline-block;
-      position: absolute;         
-      left: 83.75%;
-      right: 18.63%;
-      width: 66px;
-      height: 30px;
-      color: #FFFFFF;
-      transition: transform 0.3s ease;
+  
+    & .collapse-content-closed {
+      height: 0;
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
     }
-  }
-      
-  .RectangleTexte {
-    overflow: hidden;
-    height: 0;
-    transition: height 0.3s ease-out;
-  }
-      
-  .RectangleTexte.open {
-    height: auto;
-    transition: height 0.3s ease-out;
-  }
-      
-  .bis {
-    padding: 20px;
+  
+    & .collapse-content {
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+      padding: 20px;
+      Width:335px;
     background: #F7F7F7;
     border-radius: 5px;
     //width: 71%;
@@ -170,39 +201,284 @@
         //width: 71%;
         color: #FF6060;
       }
-  }
-
-  .apropos-collapsable1 {
-    display: flex;
+      
+    }
+  
+    & .collapse-0 {
+      display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     position: relative;
     top:330px;
-}
-  .apropos-collapsable2 {
-    display: flex;
+    }
+  
+    & .collapse-1 {
+      display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     position: relative;
     //top:484px;
     top: 335px;
-  }
-  .apropos-collapsable3 {
-    display: flex;
+    }
+  
+    & .collapse-2 {
+      display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    position: relative;
+    //top:699px;
+    top: 340px;display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     position: relative;
     //top:699px;
     top: 340px;
+    }
+  
+    & .collapse-3 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:776px;
+      top: 348px;
+    }
   }
-  .apropos-collapsable4 {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    position: relative;
-    //top:776px;
-    top: 348px;
-  }     
-  }
+}
 
-   }
+
+/* Scss logement collapse ***********************************************************************/
+.logement-collapse {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  .collapse-container {
+    width: calc(50% - 40px);
+    margin-bottom: 20px;
+  }
+ 
+    
+  .collapse-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+        
+      padding: 16px;
+      background: #FF6060;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 58px;
+      width: 582px;
+      height: 52px;
+      //position: absolute;
+      //z-index: 1;
+
+      h3 {
+        margin: 0;
+        font-size: 18px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 142.6%;
+        display: flex;
+        align-items: center;
+   
+        color: #FFFFFF;
+      }
+
+        .collapse-icon {
+          transition: transform 0.3s ease-in-out;
+          width: 24px;
+          height: 24px;
+          color: #FFFFFF;
+
+          &.open {
+            transform: rotate(180deg);
+          }
+        }
+      }
+
+      
+
+      & .collapse-content-closed {
+        height: 0;
+        overflow: hidden;
+       // transition: height 0.3s ease-in-out;
+        color: #FF6060;
+        font-size: 18px;
+        
+      }
+
+      .collapse-content {
+        overflow: hidden;
+        transition: height 0.3s ease-in-out;
+        
+        padding: 16px;
+        background: #F7F7F7;
+        border-radius: 10px;
+        Width:582px;
+        Height:249px;
+  
+        p {
+          margin: 0;
+          font-family: 'Montserrat';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 18px;
+          line-height: 142.6%;
+          /* or 26px */
+  
+          color: #FF6060;
+        }
+  
+        ul {
+          margin: 0;
+          padding: 0;
+          list-style: none;
+  
+          li {
+            margin-bottom: 8px;
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 142.6%;
+            /* or 26px */
+    
+            color: #FF6060;
+          }
+        }
+      }
+
+      &.collapse-custom1 {
+       
+        
+        
+          color: #0052cc;
+        
+      }
+
+      &.collapse-custom2 {
+        margin-left: 20px;
+        
+          color: #ff9800;
+        
+      }
+    
+  
+
+  @media (max-width: 375px) {
+    flex-direction: column;
+        position: relative;
+    top: -190px;
+
+    .collapse-container {
+      width: 100%;
+      margin-bottom: -10px;
+    }
+   
+    .collapse-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      
+      padding: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 16px;
+      background: #FF6060;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 58px;
+      width: 335px;
+      height: 29.93px;
+      border-radius: 5px;
+
+
+      h3 {
+        margin: 0;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 142.6%;
+        /* identical to box height, or 19px */
+
+        display: flex;
+        align-items: center;
+
+        color: #FFFFFF;
+      }
+      .collapse-icon {
+        transition: transform 0.3s ease-in-out;
+        width: 20px;
+        height: 20px;
+        color: #FFFFFF;
+
+        &.open {
+          transform: rotate(180deg);
+        }
+      }
+    }
+
+    
+
+    & .collapse-content-closed {
+      height: 0;
+      overflow: hidden;
+      //transition: height 0.3s ease-in-out;
+      
+      color: #FF6060;
+      font-size: 12px;
+    }
+
+    .collapse-content {
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+      
+      padding: 12px;
+      //width: 316.58px;
+      height: 143.32px;
+      width: 335px;
+      background: #F7F7F7;
+      border-radius: 5px;
+
+      p {
+        margin: 0;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 142.6%;
+        /* or 17px */
+        
+
+
+        color: #FF6060;
+      }
+
+      ul {
+        li {
+          font-family: 'Montserrat';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 12px;
+          line-height: 142.6%;
+          /* or 17px */
+
+
+          color: #FF6060;
+        }
+      }
+    }
+ 
+  }
+}
+
+
+
