--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -20,7 +20,7 @@
 }    
 .kasa-home-body-section1{
      position: absolute;
-     width: 1240px;
+     //width: 1240px;
      width: 100%;
      height: 223px;
      //left: 100px;
