--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -121,8 +121,14 @@
     //top:776px;
     top: 454px;
   }
+/*
+  @media screen and  (min-width: 1441px) {
 
-
+    .apropos-collapse{
+      margin-left: 10%;
+    }
+  }
+  */
   @media screen and (max-width: 375px){
     @include collapse-aproposM();
     top: 340px;
@@ -138,14 +144,14 @@
   
     & .collapse-header {
       display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background: #FF6060;
-    border-radius: 5px;
-    cursor: pointer;
-    Width:335px;
-    Height:30px;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: #FF6060;
+      border-radius: 5px;
+      cursor: pointer;
+      Width:335px;
+      Height:30px;
   
       h3 {
         margin: 0;
@@ -169,7 +175,7 @@
         height: 30px;
         color: #FFFFFF;
         transition: transform 0.3s ease;
-  
+        
         &.open {
           transform: rotate(180deg);
         }
@@ -241,7 +247,7 @@
       margin-bottom: 20px;
       position: relative;
       //top:776px;
-      top: 348px;
+      //top: 348px;
     }
   }
 }
@@ -252,13 +258,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  /*******/
 
   .collapse-container {
-    width: calc(50% - 40px);
+    width: calc(50% - 38px);
     margin-bottom: 20px;
   }
  
-    
+   
   .collapse-header {
         display: flex;
         justify-content: space-between;
@@ -272,8 +279,8 @@
       margin-top: 58px;
       width: 582px;
       height: 52px;
-      //position: absolute;
-      //z-index: 1;
+      position: absolute;
+      z-index: 1;
 
       h3 {
         margin: 0;
@@ -294,33 +301,40 @@
           width: 24px;
           height: 24px;
           color: #FFFFFF;
+      
+      
+        
 
           &.open {
             transform: rotate(180deg);
           }
         }
-      }
+  }
 
       
 
-      & .collapse-content-closed {
+  & .collapse-content-closed {
         height: 0;
         overflow: hidden;
        // transition: height 0.3s ease-in-out;
         color: #FF6060;
         font-size: 18px;
         
-      }
+  }
 
-      .collapse-content {
+  .collapse-content {
         overflow: hidden;
         transition: height 0.3s ease-in-out;
         
         padding: 16px;
         background: #F7F7F7;
+        line-height: 142.6%;
         border-radius: 10px;
         Width:582px;
         Height:249px;
+        top: 95px;
+        position: absolute;
+        
   
         p {
           margin: 0;
@@ -330,7 +344,8 @@
           font-size: 18px;
           line-height: 142.6%;
           /* or 26px */
-  
+          line-height: 142.6%;
+          margin-top: 18px;
           color: #FF6060;
         }
   
@@ -338,7 +353,8 @@
           margin: 0;
           padding: 0;
           list-style: none;
-  
+          line-height: 142.6%;
+          margin-top: 18px;
           li {
             margin-bottom: 8px;
             font-family: 'Montserrat';
@@ -351,33 +367,21 @@
             color: #FF6060;
           }
         }
-      }
-
-      &.collapse-custom1 {
-       
-        
-        
-          color: #0052cc;
-        
-      }
-
-      &.collapse-custom2 {
-        margin-left: 20px;
-        
-          color: #ff9800;
-        
-      }
-    
-  
-
+  }
   @media (max-width: 375px) {
+  
     flex-direction: column;
-        position: relative;
-    top: -190px;
-
-    .collapse-container {
-      width: 100%;
-      margin-bottom: -10px;
+    position: absolute;
+    width: 335px; 
+    top: -180px;
+   
+    & .collapse-container {
+      margin-bottom: 20px;
+     
+  
+      &:not(:last-child) {
+        margin-bottom: -40px;
+            }
     }
    
     .collapse-header {
@@ -398,8 +402,9 @@
       width: 335px;
       height: 29.93px;
       border-radius: 5px;
-
-
+      position: unset;
+  
+  
       h3 {
         margin: 0;
         font-family: 'Montserrat';
@@ -407,11 +412,11 @@
         font-weight: 500;
         font-size: 13px;
         line-height: 142.6%;
-        /* identical to box height, or 19px */
-
+        // identical to box height, or 19px //
+  
         display: flex;
         align-items: center;
-
+  
         color: #FFFFFF;
       }
       .collapse-icon {
@@ -419,15 +424,15 @@
         width: 20px;
         height: 20px;
         color: #FFFFFF;
-
+  
         &.open {
           transform: rotate(180deg);
         }
       }
     }
-
+  
     
-
+  
     & .collapse-content-closed {
       height: 0;
       overflow: hidden;
@@ -436,7 +441,7 @@
       color: #FF6060;
       font-size: 12px;
     }
-
+  
     .collapse-content {
       overflow: hidden;
       transition: height 0.3s ease-in-out;
@@ -447,7 +452,8 @@
       width: 335px;
       background: #F7F7F7;
       border-radius: 5px;
-
+      position: unset;
+  
       p {
         margin: 0;
         font-family: 'Montserrat';
@@ -455,13 +461,13 @@
         font-weight: 400;
         font-size: 12px;
         line-height: 142.6%;
-        /* or 17px */
+        // or 17px //
         
-
-
+  
+  
         color: #FF6060;
       }
-
+  
       ul {
         li {
           font-family: 'Montserrat';
@@ -469,15 +475,18 @@
           font-weight: 400;
           font-size: 12px;
           line-height: 142.6%;
-          /* or 17px */
-
-
+          // or 17px //
+  
+  
           color: #FF6060;
         }
       }
     }
- 
-  }
+    }
+  
+  
+  
+  
 }
 
 
