--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -85,20 +85,33 @@
 .kasa-home-section-gallery{
      position: absolute;
      width: 1240px;
-     height: 829px;
+     //height: 829px;
      //height: 780px;
      //height: 2830px;
      left: -3px;
      top: 278px;
-    
+     height: 2817px;
      background: #F7F7F7;
      border-radius: 25px; 
+}
+
+@media screen and (min-width: 1600px) and (max-width: 2000px) {
+     .kasa-home { 
+     margin-left: 10%;
+     }
+     
+}
+@media screen and (min-width: 2001px) {
+     .kasa-home { 
+     margin-left: 15%;
+     }
+     
 }
 
 @media screen and (max-width: 375px){
      .kasa-home {
           @include pageLengthmobile();
-     
+          margin-bottom: 4800px;
      }
      .kasa-home-body {
    
