--- a/src/styles/_hostrate.scss
+++ b/src/styles/_hostrate.scss
@@ -84,12 +84,16 @@
           
           .HostRate-host-name {
                position: absolute;
-               width: 93px;
-               height: 33px;
+               //width: 93px;
+               //height: 33px;
                //left: 1170px;
-               left: 235px;
+               //left: 235px;
                //top: 573px;
-               top: 334px;
+               //top: 334px;
+               width: 62px;
+               height: 33px;
+               left: 230px;
+               top: 348px;
           
                font-family: 'Montserrat';
                font-style: normal;
