--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,20 +1,18 @@
 
 // mixin pages Desktop length D_Home D_Fiche-Logement D_404 D_A-Propos 
 
-
 @mixin pageLengthdesktop{
      position: relative;
-     width: 1440px;
+     width: 100%;
      height: 1024px;
 
-     //background: #FFFFFF;
-     
 }
+
 
 @mixin pageLengthmobile{
      position: relative;
      width: 375px;
-     height: 812px;
+     //height: 812px;
 
      //background: #FFFFFF;
 }
