--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -79,13 +79,13 @@
 
 @media screen and  (min-width: 1600px) and (max-width: 2000px) {
     .kasa-header { 
-    margin-left: 10%;
+    left: 13%;
     }
     
 }
 @media screen and  (min-width: 2001px){
     .kasa-header { 
-        margin-left: 15%;
+        left: 17%;
         }
 }
 
