--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -4,10 +4,13 @@
 .kasa-home {
      @include pageLengthdesktop();
      margin-bottom: 2250px;
+   //  display:flex ;
+   //  flex-direction: column;
+  //min-height: 100%;
 }
 
 .kasa-home-body {
-   
+  // flex:1;
      position: absolute;
      width: 1240px;
      height: 1095px;
@@ -96,14 +99,20 @@
 }
 
 @media screen and (min-width: 1600px) and (max-width: 2000px) {
-     .kasa-home { 
-     margin-left: 10%;
+     .kasa-home-body-section1 { 
+          left: 13%;
+     }
+     .kasa-home-section-gallery{
+          left: 13%;
      }
      
 }
 @media screen and (min-width: 2001px) {
-     .kasa-home { 
-     margin-left: 15%;
+     .kasa-home-body-section1 { 
+          left: 20%;
+     }
+     .kasa-home-section-gallery{
+          left: 20%;
      }
      
 }
