--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,5 +1,6 @@
 //footer{
 //     flex-shrink: 0;
+//     bottom: 0;
 //}
 .kasa-footer{
     
@@ -54,7 +55,13 @@
     
 }
 
-
+@media screen and (min-width: 1460px) and (max-width: 1599px) {
+     .kasa-footer {
+   
+          width: 100%;
+          
+           }
+}
 @media screen and  (min-width: 1600px) {
      .kasa-footer {
    
