--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -37,13 +37,25 @@
 
 @media screen and  (min-width: 1600px) and (max-width: 2000px){
      .kasa-logement { 
-     margin-left: 10%;
+          .kasa-logement-body{
+          left: 13%;
+          }
      }
      
  }
  @media screen and  (min-width: 2001px){
      .kasa-logement { 
-     margin-left: 15%;
+          .kasa-logement-body{
+          left: 15%;
+          }
+     }
+     
+ } 
+ @media screen and  (min-width: 2560px){
+     .kasa-logement { 
+          .kasa-logement-body{
+          left: 23%;
+          }
      }
      
  } 
