--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -60,6 +60,9 @@
      
  } 
 @media screen and (max-width: 375px){
+     .kasa-page{
+          height: 900px
+     }
      .kasa-logement{
           @include pageLengthmobile();
           .kasa-logement-body{
