--- a/src/styles/_tag.scss
+++ b/src/styles/_tag.scss
@@ -7,13 +7,8 @@
           top: 12%;
           bottom: 8%;
           //width: 202px;
-          font-family: 'Montserrat';
-          font-style: normal;
-          font-weight: 500;
+          @include  policeStyle1();
           font-size: 14px;
-          line-height: 142.6%;
-          /* identical to box height, or 20px */
-
           text-align: center;
 
           color: #FFFFFF;
@@ -90,13 +85,8 @@
                top: 12%;
                bottom: 10.22%;
 
-               font-family: 'Montserrat';
-               font-style: normal;
-               font-weight: 500;
+               @include  policeStyle1();
                font-size: 10px;
-               line-height: 142.6%;
-               //width: 202px;
-     
                text-align: center;
      
                color: #FFFFFF;
