--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -10,7 +10,7 @@
   top: 406px;
 
 
-  & .collapse-container {
+ .collapse-container {
     margin-bottom: 20px;
    
 
@@ -19,7 +19,7 @@
     }
   }
 
-  & .collapse-header {
+  .collapse-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,13 +57,13 @@
     }
   }
 
-  & .collapse-content-closed {
+  .collapse-content-closed {
     height: 0;
     overflow: hidden;
     transition: height 0.3s ease-in-out;
   }
 
-  & .collapse-content {
+  .collapse-content {
     overflow: hidden;
     transition: height 0.3s ease-in-out;
     padding: 20px;
@@ -81,7 +81,7 @@
     
   }
 
-  & .collapse-0 {
+  .collapse-0 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
@@ -89,7 +89,7 @@
     top:406px;
   }
 
-  & .collapse-1 {
+  .collapse-1 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
@@ -98,7 +98,7 @@
     top: 422px;
   }
 
-  & .collapse-2 {
+  .collapse-2 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
@@ -107,7 +107,7 @@
     top: 439px;
   }
 
-  & .collapse-3 {
+  .collapse-3 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
@@ -122,7 +122,7 @@
     @include collapse-aproposM();
     top: 340px;
  
-    & .collapse-container {
+    .collapse-container {
       margin-bottom: 20px;
      
   
@@ -131,7 +131,7 @@
       }
     }
   
-    & .collapse-header {
+    .collapse-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -169,13 +169,13 @@
       }
     }
   
-    & .collapse-content-closed {
+    .collapse-content-closed {
       height: 0;
       overflow: hidden;
       transition: height 0.3s ease-in-out;
     }
   
-    & .collapse-content {
+    .collapse-content {
       overflow: hidden;
       transition: height 0.3s ease-in-out;
       padding: 20px;
@@ -195,7 +195,7 @@
       
     }
   
-    & .collapse-0 {
+    .collapse-0 {
       display: flex;
     flex-direction: column;
     margin-bottom: 20px;
@@ -203,7 +203,7 @@
     top:330px;
     }
   
-    & .collapse-1 {
+    .collapse-1 {
       display: flex;
       flex-direction: column;
       margin-bottom: 20px;
@@ -212,7 +212,7 @@
       top: 335px;
     }
   
-    & .collapse-2 {
+    .collapse-2 {
       display: flex;
       flex-direction: column;
       margin-bottom: 20px;
@@ -226,7 +226,7 @@
       top: 340px;
     }
   
-    & .collapse-3 {
+    .collapse-3 {
       display: flex;
       flex-direction: column;
       margin-bottom: 20px;
@@ -315,7 +315,7 @@
 
       
 
-  & .collapse-content-closed {
+  .collapse-content-closed {
         height: 0;
         overflow: hidden;
        // transition: height 0.3s ease-in-out;
@@ -369,7 +369,7 @@
     width: 335px; 
     top: -180px;
    
-    & .collapse-container {
+    .collapse-container {
       margin-bottom: 20px;
      
   
@@ -426,7 +426,7 @@
   
     
   
-    & .collapse-content-closed {
+    .collapse-content-closed {
       height: 0;
       overflow: hidden;
       //transition: height 0.3s ease-in-out;
