--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,203 +1,196 @@
 @import "../styles/mixins.scss";
 
-
 .kasa-home {
      @include pageLengthdesktop();
      margin-bottom: 2250px;
-   
-}
-
-.kasa-home-body {
+     &_body {
   
-     position: absolute;
-     width: 1240px;
-     height: 1095px;
-     left: 100px;
-     top: 171px;
-     //width: 90%;
-   // height: 98%;
-
-    
-}    
-.kasa-home-body-section1{
-     position: absolute;
-     //width: 1240px;
-     width: 100%;
-     height: 223px;
-     //left: 100px;
-     //top: 171px;
- 
-     background: #1e1c1c3d;
-     background-size: cover;
-     overflow: hidden;
-     mix-blend-mode: darken;
-    
-     border-radius: 25px;
-     img{
-         
-          width: 100%;
-          mix-blend-mode: darken;
-          border-radius: 25px;
-          transform: translate(1px, -310px);
-          
-     }
-     
-     .kasa-home-body-section1-desk{
-         
-       
-
-     h1{
-          
           position: absolute;
-          left: 22.9%;
-          right: 25.14%;
-          top: 30.32%;
-          bottom: 69.04%;
-          height: 68px;
-          width: 705px;
-         
-          @include  policeStyle1();
-          font-size: 48px;
-          letter-spacing: 3px;
-          color: #FFFFFF;
-                             
-          z-index: 1;
-     }
-     .kasa-home-body-section1-mobile{
-          display: none;
-     }
-}
-    
-     
-     
+          width: 1240px;
+          height: 1095px;
+          left: 100px;
+          top: 171px;
+          //width: 90%;
+        // height: 98%;
 
+          .kasa-home-body_section1{
+               position: absolute;
+               //width: 1240px;
+               width: 100%;
+               height: 223px;
+               //left: 100px;
+               //top: 171px;
+          
+               background: #1e1c1c3d;
+               background-size: cover;
+               overflow: hidden;
+               mix-blend-mode: darken;
+          
+               border-radius: 25px;
+               img{
+               
+                    width: 100%;
+                    mix-blend-mode: darken;
+                    border-radius: 25px;
+                    transform: translate(1px, -310px);
+                    
+               }
+               
+               .kasa-home-body-section1_desk{
+                    h1{
+                         
+                         position: absolute;
+                         left: 22.9%;
+                         right: 25.14%;
+                         top: 30.32%;
+                         bottom: 69.04%;
+                         height: 68px;
+                         width: 705px;
+                    
+                         @include  policeStyle1();
+                         font-size: 48px;
+                         letter-spacing: 3px;
+                         color: #FFFFFF;
+                                        
+                         z-index: 1;
+                    }
+              
+               }
+               .kasa-home-body-section1_mobile{
+                    display: none;
+               }
+          }
+
+          .kasa-home-body_gallery{
+               position: absolute;
+               width: 1240px;
+               //height: 829px;
+               //height: 780px;
+               //height: 2830px;
+               left: -3px;
+               top: 278px;
+               height: 2817px;
+               background: #F7F7F7;
+               border-radius: 25px; 
+          }
+     }    
 }
 
-.kasa-home-section-gallery{
-     position: absolute;
-     width: 1240px;
-     //height: 829px;
-     //height: 780px;
-     //height: 2830px;
-     left: -3px;
-     top: 278px;
-     height: 2817px;
-     background: #F7F7F7;
-     border-radius: 25px; 
-}
 @media screen and (min-width: 1460px) and (max-width: 1599px) {
      .kasa-home {
           width: 80%;
      }
-     .kasa-home-body-section1 { 
+     .kasa-home-body_section1 { 
           left: 0%;
      }
-     .kasa-home-section-gallery{
+     .kasa-home-body_gallery{
           left: 0%;
      }
      
 }
 @media screen and (min-width: 1600px) and (max-width: 2000px) {
-     .kasa-home-body-section1 { 
-          left: 9%;
+     .kasa-home{
+          .kasa-home-body_section1 { 
+               left: 9%;
+          }
+          .kasa-home-body_gallery{
+               left: 9%;
+          }
      }
-     .kasa-home-section-gallery{
-          left: 9%;
-     }
-     
 }
 @media screen and (min-width: 2001px) and (max-width: 2559px){
-     .kasa-home-body-section1 { 
-          left: 20%;
+     .kasa-home{
+          .kasa-home-body_section1 { 
+               left: 20%;
+          }
+          .kasa-home-body_gallery{
+               left: 20%;
+          }
      }
-     .kasa-home-section-gallery{
-          left: 20%;
-     }
-     
 }
 @media screen and (min-width: 2560px) {
-     .kasa-home-body-section1 { 
-          left: 40%;
+    .kasa-home{
+          .kasa-home-body_section1 { 
+               left: 40%;
+          }
+          .kasa-home-body_gallery{
+               left: 40%;
+          }
      }
-     .kasa-home-section-gallery{
-          left: 40%;
-     }
-     
 }
 @media screen and (max-width: 375px){
      .kasa-home {
           @include pageLengthmobile();
           margin-bottom: 4800px;
-     }
-     .kasa-home-body {
    
-          position: absolute;
-          width: 336px;
-          //height: 938px;
-          height:805px;
-          left: 20px;
-          top: 83px;
-             
-     }    
+          &_body {
      
-     .kasa-home-body-section1 { 
-          position: absolute;
-          width: 335px;
-          height: 111px;
-          //left: 20px;
-          //top: 83px;
-          border-radius: 10px;
-          
-          .sectionimage{
-              margin-top: 84px;
-              // mix-blend-mode: darken;
-               //transform: translate(1px, -310px);
-               border-radius:10px;
-             
-          }
-          .kasa-home-body-section1-desk{
-               display: none;
-          }
-          .kasa-home-body-section1-mobile{
-            
-               h1{
+               position: absolute;
+               width: 336px;
+               //height: 938px;
+               height:805px;
+               left: 20px;
+               top: 83px;
+               
+               .kasa-home-body_section1 { 
                     position: absolute;
-                    left: 5.6%;
-                    right: 32.53%;
-                    top: 14.04%;
-                    bottom: 26.05%;
+                    width: 335px;
+                    height: 111px;
+                    //left: 20px;
+                    //top: 83px;
+                    border-radius: 10px;
+                    
+                    .sectionimage{
+                    margin-top: 84px;
+                    // mix-blend-mode: darken;
+                         //transform: translate(1px, -310px);
+                         border-radius:10px;
+                    
+                    }
+                    .kasa-home-body-section1_desk{
+                         display: none;
+                    }
+                    .kasa-home-body-section1_mobile{
+                    
+                         h1{
+                              position: absolute;
+                              left: 5.6%;
+                              right: 32.53%;
+                              top: 14.04%;
+                              bottom: 26.05%;
 
-                    @include  policeStyle1();
-                    font-size: 24px;
-                    line-height: 100%;
-                    //or 24px 
-                    //height: 48px;
-                    //width: 217px;
+                              @include  policeStyle1();
+                              font-size: 24px;
+                              line-height: 100%;
+                              //or 24px 
+                              //height: 48px;
+                              //width: 217px;
+                    
+                              display: flex;
+                              align-items: flex-end;
+               
+                              color: #FFFFFF;
+                              z-index: 1;
+                         }
+
+                    }          
+                    
+                    
+               
+               }    
           
-                    display: flex;
-                    align-items: flex-end;
-     
-                    color: #FFFFFF;
-                    z-index: 1;
+               .kasa-home-body_gallery{
+               //section 2 = gallery
+                    position: absolute;
+                    width: 335px;
+                    height: 805px;
+               
+                    //left: 21px;
+                    top: 133px;
+                    left: 1px;
+                    background-color: #FFFFFF;
+                    
                }
-
-          }          
-          
-          
-         
-     }    
-    
-     .kasa-home-section-gallery{
-         //section 2 = gallery
-          position: absolute;
-          width: 335px;
-          height: 805px;
-     
-          //left: 21px;
-          top: 133px;
-          left: 1px;
-          background-color: #FFFFFF;
-          
-     }
-
+          }
+     }  
 }
